// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputPresenter renders by default 1`] = `
.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::selection {
  background-color: rgba(6,150,215,0.25);
}

<input
  className="emotion-0"
  disabled={undefined}
  onBlur={undefined}
  onFocus={undefined}
  onMouseEnter={undefined}
  onMouseLeave={undefined}
/>
`;

exports[`InputPresenter renders when disabled 1`] = `
.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::selection {
  background-color: rgba(6,150,215,0.25);
}

<input
  className="emotion-0"
  disabled={undefined}
  isDisabled={true}
  onBlur={undefined}
  onFocus={undefined}
  onMouseEnter={undefined}
  onMouseLeave={undefined}
/>
`;

exports[`InputPresenter renders with focus 1`] = `
.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::selection {
  background-color: rgba(6,150,215,0.25);
}

<input
  className="emotion-0"
  disabled={undefined}
  onBlur={undefined}
  onFocus={undefined}
  onMouseEnter={undefined}
  onMouseLeave={undefined}
/>
`;

exports[`InputPresenter renders with hover 1`] = `
.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::selection {
  background-color: rgba(6,150,215,0.25);
}

<input
  className="emotion-0"
  disabled={undefined}
  onBlur={undefined}
  onFocus={undefined}
  onMouseEnter={undefined}
  onMouseLeave={undefined}
/>
`;

exports[`InputPresenter renders with id 1`] = `
.emotion-0 {
  background-color: transparent;
  box-sizing: border-box;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-top: 4px;
  padding-right: 0;
  padding-bottom: 4px;
  padding-left: 0;
  outline: none;
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 600;
  line-height: 1.4;
  width: 100%;
  color: #3c3c3c;
  height: calc(36px - 2px);
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
}

.emotion-0::-webkit-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-moz-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0:-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::-ms-input-placeholder {
  color: rgba(60,60,60,0.4);
}

.emotion-0::selection {
  background-color: rgba(6,150,215,0.25);
}

<input
  className="emotion-0"
  disabled={undefined}
  id="my_id"
  onBlur={undefined}
  onFocus={undefined}
  onMouseEnter={undefined}
  onMouseLeave={undefined}
/>
`;
